// HRMS PT. Sinergi Asta Nusantara - Database Schema

generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ─── Enums ───────────────────────────────────────────────────────────

enum Role {
  SUPER_ADMIN
  HR_ADMIN
  MANAGER
  EMPLOYEE
}

enum AuditAction {
  CREATE
  UPDATE
  DELETE
}

enum Gender {
  MALE
  FEMALE
}

enum Religion {
  ISLAM
  KRISTEN
  KATOLIK
  HINDU
  BUDDHA
  KONGHUCU
}

enum MaritalStatus {
  TK
  K
}

enum ContractType {
  PKWT
  PKWTT
}

enum PTKPStatus {
  TK_0
  TK_1
  TK_2
  TK_3
  K_0
  K_1
  K_2
  K_3
}

enum DocumentType {
  KTP
  NPWP
  BPJS_KESEHATAN
  BPJS_KETENAGAKERJAAN
  KONTRAK
  FOTO
  LAINNYA
}

enum AttendanceStatus {
  ON_TIME
  LATE
  EARLY_OUT
  OVERTIME
  LATE_AND_EARLY_OUT
  LATE_AND_OVERTIME
}

enum LeaveStatus {
  PENDING_MANAGER
  PENDING_HR
  APPROVED
  REJECTED
  CANCELLED
}

enum PayrollStatus {
  DRAFT
  FINALIZED
}

enum VacancyStatus {
  OPEN
  CLOSED
}

enum CandidateStage {
  MELAMAR
  SELEKSI_BERKAS
  INTERVIEW
  PENAWARAN
  DITERIMA
  DITOLAK
}

// ─── Models ──────────────────────────────────────────────────────────

model User {
  id             String   @id @default(cuid())
  name           String
  email          String   @unique
  hashedPassword String
  role           Role     @default(EMPLOYEE)
  isActive       Boolean  @default(true)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  auditLogs            AuditLog[]
  employee             Employee?
  attendanceOverrides  AttendanceRecord[] @relation("AttendanceOverrides")
  leaveManagerApprovals LeaveRequest[]    @relation("LeaveManagerApprovals")
  leaveHRApprovals      LeaveRequest[]    @relation("LeaveHRApprovals")

  @@map("users")
}

model Department {
  id          String    @id @default(cuid())
  name        String
  description String?
  deletedAt   DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  positions  Position[]
  employees  Employee[]
  vacancies  Vacancy[]

  @@map("departments")
}

model Position {
  id           String    @id @default(cuid())
  name         String
  departmentId String
  deletedAt    DateTime?
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  department Department @relation(fields: [departmentId], references: [id])
  employees  Employee[]

  @@map("positions")
}

model OfficeLocation {
  id            String    @id @default(cuid())
  name          String
  address       String?
  allowedIPs    String[]
  latitude      Float?
  longitude     Float?
  radiusMeters  Int?
  workStartTime String?
  workEndTime   String?
  deletedAt     DateTime?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  employees   Employee[]
  attendances AttendanceRecord[]

  @@map("office_locations")
}

model LeaveType {
  id                String    @id @default(cuid())
  name              String
  annualQuota       Int
  isPaid            Boolean   @default(true)
  genderRestriction String?
  deletedAt         DateTime?
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt

  leaveRequests LeaveRequest[]
  leaveBalances LeaveBalance[]

  @@map("leave_types")
}

model AuditLog {
  id        String      @id @default(cuid())
  userId    String
  action    AuditAction
  module    String
  targetId  String
  oldValue  Json?
  newValue  Json?
  createdAt DateTime    @default(now())

  user User @relation(fields: [userId], references: [id])

  @@index([userId, module, createdAt])
  @@map("audit_logs")
}

model Employee {
  id                     String         @id @default(cuid())
  nik                    String         @unique
  userId                 String         @unique
  namaLengkap            String
  nikKtp                 String?
  tempatLahir            String?
  tanggalLahir           DateTime?
  jenisKelamin           Gender?
  statusPernikahan       MaritalStatus?
  agama                  Religion?
  alamat                 String?
  nomorHp                String?
  email                  String
  departmentId           String
  positionId             String
  officeLocationId       String?
  contractType           ContractType
  joinDate               DateTime
  isActive               Boolean        @default(true)
  terminationDate        DateTime?
  terminationReason      String?
  npwp                   String?
  ptkpStatus             PTKPStatus?
  bpjsKesehatanNo        String?
  bpjsKetenagakerjaanNo  String?
  isTaxBorneByCompany    Boolean        @default(false)
  createdAt              DateTime       @default(now())
  updatedAt              DateTime       @updatedAt

  user              User               @relation(fields: [userId], references: [id])
  department        Department         @relation(fields: [departmentId], references: [id])
  position          Position           @relation(fields: [positionId], references: [id])
  officeLocation    OfficeLocation?    @relation(fields: [officeLocationId], references: [id])
  documents         EmployeeDocument[]
  emergencyContacts EmergencyContact[]
  attendances       AttendanceRecord[]
  leaveRequests     LeaveRequest[]
  leaveBalances     LeaveBalance[]
  payrollEntries    PayrollEntry[]

  @@map("employees")
}

model EmployeeDocument {
  id           String       @id @default(cuid())
  employeeId   String
  documentType DocumentType
  fileName     String
  filePath     String
  fileSize     Int
  mimeType     String
  createdAt    DateTime     @default(now())
  updatedAt    DateTime     @updatedAt

  employee Employee @relation(fields: [employeeId], references: [id], onDelete: Cascade)

  @@map("employee_documents")
}

model EmergencyContact {
  id           String   @id @default(cuid())
  employeeId   String
  name         String
  relationship String
  phone        String
  address      String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  employee Employee @relation(fields: [employeeId], references: [id], onDelete: Cascade)

  @@map("emergency_contacts")
}

model AttendanceRecord {
  id               String  @id @default(cuid())
  employeeId       String
  officeLocationId String
  date             DateTime @db.Date
  clockIn          DateTime?
  clockOut         DateTime?
  clockInIp        String?
  clockOutIp       String?
  clockInLat       Float?
  clockInLon       Float?
  isLate           Boolean  @default(false)
  lateMinutes      Int      @default(0)
  isEarlyOut       Boolean  @default(false)
  earlyOutMinutes  Int      @default(0)
  overtimeMinutes  Int      @default(0)
  totalMinutes     Int      @default(0)
  isManualOverride Boolean  @default(false)
  overrideById     String?
  overrideReason   String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  employee       Employee       @relation(fields: [employeeId], references: [id])
  officeLocation OfficeLocation @relation(fields: [officeLocationId], references: [id])
  overrideBy     User?          @relation("AttendanceOverrides", fields: [overrideById], references: [id])

  @@unique([employeeId, date])
  @@index([employeeId, date])
  @@map("attendance_records")
}

model LeaveRequest {
  id                  String      @id @default(cuid())
  employeeId          String
  leaveTypeId         String
  startDate           DateTime    @db.Date
  endDate             DateTime    @db.Date
  workingDays         Int
  reason              String
  status              LeaveStatus @default(PENDING_MANAGER)
  managerApprovedById String?
  managerNotes        String?
  managerApprovedAt   DateTime?
  hrApprovedById      String?
  hrNotes             String?
  hrApprovedAt        DateTime?
  createdAt           DateTime    @default(now())
  updatedAt           DateTime    @updatedAt

  employee          Employee  @relation(fields: [employeeId], references: [id])
  leaveType         LeaveType @relation(fields: [leaveTypeId], references: [id])
  managerApprovedBy User?     @relation("LeaveManagerApprovals", fields: [managerApprovedById], references: [id])
  hrApprovedBy      User?     @relation("LeaveHRApprovals", fields: [hrApprovedById], references: [id])

  @@index([employeeId, status])
  @@index([status, createdAt])
  @@map("leave_requests")
}

model LeaveBalance {
  id            String   @id @default(cuid())
  employeeId    String
  leaveTypeId   String
  year          Int
  allocatedDays Int
  usedDays      Int      @default(0)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  employee  Employee  @relation(fields: [employeeId], references: [id])
  leaveType LeaveType @relation(fields: [leaveTypeId], references: [id])

  @@unique([employeeId, leaveTypeId, year])
  @@map("leave_balances")
}

model PayrollRun {
  id        String        @id @default(cuid())
  month     Int
  year      Int
  status    PayrollStatus @default(DRAFT)
  createdBy String
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt

  entries PayrollEntry[]

  @@unique([month, year])
  @@map("payroll_runs")
}

model PayrollEntry {
  id           String @id @default(cuid())
  payrollRunId String
  employeeId   String

  // Employee snapshot (saat import)
  employeeNik  String
  employeeName String
  jobPosition  String  @default("")
  organization String  @default("")
  gradeLevel   String  @default("")
  ptkpStatus   String  @default("")
  npwp         String?

  // Earnings
  basicSalary         Decimal @db.Decimal(15, 2) @default(0)
  tunjanganKomunikasi Decimal @db.Decimal(15, 2) @default(0)
  tunjanganKehadiran  Decimal @db.Decimal(15, 2) @default(0)
  tunjanganJabatan    Decimal @db.Decimal(15, 2) @default(0)
  tunjanganLainnya    Decimal @db.Decimal(15, 2) @default(0)
  taxAllowance        Decimal @db.Decimal(15, 2) @default(0)
  thr                 Decimal @db.Decimal(15, 2) @default(0)
  totalEarnings       Decimal @db.Decimal(15, 2)

  // Deductions
  bpjsKesehatanEmployee  Decimal @db.Decimal(15, 2) @default(0)
  jhtEmployee            Decimal @db.Decimal(15, 2) @default(0)
  jaminanPensiunEmployee Decimal @db.Decimal(15, 2) @default(0)
  pph21                  Decimal @db.Decimal(15, 2) @default(0)
  potonganKeterlambatan  Decimal @db.Decimal(15, 2) @default(0)
  potonganKoperasi       Decimal @db.Decimal(15, 2) @default(0)
  potonganLainnya        Decimal @db.Decimal(15, 2) @default(0)
  totalDeductions        Decimal @db.Decimal(15, 2)

  takeHomePay Decimal @db.Decimal(15, 2)

  // Benefits (informational — porsi perusahaan, tidak masuk THP)
  jkk                   Decimal @db.Decimal(15, 2) @default(0)
  jkm                   Decimal @db.Decimal(15, 2) @default(0)
  jhtCompany            Decimal @db.Decimal(15, 2) @default(0)
  jaminanPensiunCompany Decimal @db.Decimal(15, 2) @default(0)
  bpjsKesehatanCompany  Decimal @db.Decimal(15, 2) @default(0)
  totalBenefits         Decimal @db.Decimal(15, 2)

  // Attendance summary
  actualWorkingDay   Int    @default(0)
  scheduleWorkingDay Int    @default(0)
  dayoff             Int    @default(0)
  nationalHoliday    Int    @default(0)
  companyHoliday     Int    @default(0)
  specialHoliday     Int    @default(0)
  attendanceCodes    String @default("")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  payrollRun PayrollRun @relation(fields: [payrollRunId], references: [id], onDelete: Cascade)
  employee   Employee   @relation(fields: [employeeId], references: [id])

  @@unique([payrollRunId, employeeId])
  @@index([payrollRunId])
  @@index([employeeId])
  @@map("payroll_entries")
}

// ─── Recruitment Models ───────────────────────────────────────────────

model Vacancy {
  id           String        @id @default(cuid())
  title        String
  department   Department    @relation(fields: [departmentId], references: [id])
  departmentId String
  description  String        @db.Text
  requirements String        @db.Text
  status       VacancyStatus @default(OPEN)
  openDate     DateTime
  closeDate    DateTime?
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  candidates   Candidate[]

  @@map("vacancies")
}

model Candidate {
  id          String         @id @default(cuid())
  vacancy     Vacancy        @relation(fields: [vacancyId], references: [id])
  vacancyId   String
  name        String
  email       String
  phone       String?
  stage       CandidateStage @default(MELAMAR)
  cvPath      String?
  notes       String?        @db.Text
  offerSalary Decimal?       @db.Decimal(15, 2)
  offerNotes  String?        @db.Text
  hiredAt     DateTime?
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  interviews  Interview[]

  @@map("candidates")
}

model Interview {
  id              String    @id @default(cuid())
  candidate       Candidate @relation(fields: [candidateId], references: [id])
  candidateId     String
  scheduledAt     DateTime
  interviewerName String?
  notes           String?   @db.Text
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  @@map("interviews")
}
